fix: make the phil logo align righ in chatbot page

--- a/src/templates/dtpChat/dtpChat.module.css
+++ b/src/templates/dtpChat/dtpChat.module.css
@@ -37,12 +37,12 @@
 
     .top {
         display: flex;
-        flex-direction: column-reverse;
         align-items: flex-start;
         border-bottom: 1px solid rgb(229 231 235);
         padding: 1.5rem;
         justify-content: space-between;
         gap: 15px;
+        align-items: center;
 
         .title {
             font-size: 1.3rem;
